--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,30 +1,5 @@
 <div class="container">
-    <div class="col-md-12 first-foo">
-        <div class="col-md-6 col-sm-4">
-            <div class="social-media-footer">
-                <a target="_blank" href="https://www.facebook.com/MercadoMovilMX?fref=ts">Siguenos en: <i class="fa fa-facebook-square"></i></a>
-                <a target="_blank" href="https://twitter.com/mercadomovil_mx?lang=es"> <i class="fa fa-twitter-square"></i></a>
-                <a target="_blank" href="https://plus.google.com/u/0/108180722784779473100/posts"> <i class="fa fa-google-plus-square"></i></a>
-            </div>
-        </div>
-        <div class="col-md-6 col-sm-8 info">
-            <a target="_blank" href="https://appsto.re/mx/QrI68.i"><img style="height: 35px;" src="img/download-app.png" alt="App Store"/></a>
-            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.desarrollapps.mercadomovil&hl=es"><img style="height: 35px;" src="img/download-play.png" alt="Google play"/></a>
-            <a target="_blank" href="https://www.geotrust.com/es/"><img style="height: 35px;" src="img/ssl-valid-en-M.gif" alt="Secured"/></a>
-            <a target="_blank" href="https://www.mcafeesecure.com/verify?host=mercadomovil.com.mx"><img style="height: 35px;" src="img/vp_ms_trustmark.png" alt="McAfee Secure"/></a>
-        </div>
-    </div>
-    <div class="col-md-12 second-foo">
-        <div class="col-sm-6">
-            <div class="social-media-footer">
-                <a ui-sref="docs"> Ayuda</a>
-                <a ui-sref="contact"> Contacto</a>
-                <a ui-sref="page({slug: 'terminos-y-condiciones1469127896'})"> Términos y condiciones</a>
-                <a ui-sref="page({slug: 'politicas-de-privacidad'})"> Aviso de privacidad</a>
-            </div>
-        </div>
-        <div class="col-sm-6 info">
-            <p>© Mercado Móvil 2016</p>
-        </div>
+    <div class="text-center">
+        Copyright © 2016 ainoxher
     </div>
 </div>
