--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -48,18 +48,25 @@ h5,
 h6
   margin 0 0 15px
   font-weight 500
-  font-family 'Poppins', sans-serif
+  font-family 'Roboto', sans-serif
 
 .section_padding
   padding: 80px 0
+  .title-section
+    color white
+    border-bottom 1px solid rgba(255, 255, 255, 0.5)
+    width 50%
+    margin 0 auto
+    margin-bottom 50px
+    text-align center
 
 p
-  font-family 'Poppins', sans-serif
+  font-family 'Roboto', sans-serif
   font-weight 300
   font-size 16px
 
 body
-  font-family 'Poppins', sans-serif !important
+  font-family 'Roboto', sans-serif
 
 .white
   color white !important
@@ -113,11 +120,19 @@ body
   display none
 header
   margin-top 0px
+  .nav-top
+    padding-top 10px
+    background-color white
+    p, p > a
+      color #555
+    i
+      font-size 22px
+      padding-left 10px
   .navbar-default
     position absolute
     left 0
     right 0
-    top 0px
+    top 35px
     background transparent
     height 110px
     border none
@@ -128,10 +143,11 @@ header
       padding 5px 15px
     .navbar-nav > li > a
       color #f5f5f5
-      padding 45px 10px 15px
-      font-size 18px
-      font-family 'Poppins', sans-serif
-      font-weight 300
+      padding 50px 10px 15px
+      font-size 22px
+      font-family 'Roboto', sans-serif
+      font-weight 500
+      text-shadow 0 2px 5px rgba(0,0,0, 1)
       -webkit-transition all ease-in-out .35s
       -o-transition all ease-in-out .35s
       transition all ease-in-out .35s
@@ -173,78 +189,19 @@ header
           color white
 
   .logo
-    width 300px
-    margin-top 32px
+    width auto
+    margin-top 30px
 
 .navbar-header
   color #d2b770 !important
   text-align left
-
-/* search form menu */
-#wrap
-  margin 20px 0px 15px 120px
-  display inline-block
-  position relative
-  height 60px
-  float right
-  padding 0
-  position relative
-
-
-  .input-search
-    height 55px
-    border 1px solid #eee
-    font-size 18px
-    display inline-block
-    font-weight 300
-    outline none
-    color #555
-    padding 3px
-    padding-right 40px
-    width 120px
-    position absolute
-    top 10px
-    right 0
-    background none
-    z-index 3
-    transition width 0.4s cubic-bezier(0, 0.795, 0, 1)
-    cursor pointer
-    padding-left 15px
-
-
-  input[type="text"]:focus:hover
-    border none
-    border-bottom 1px solid #BBB !important
-
-
-  input[type="text"]:focus
-    width 750px
-    background white
-    z-index 1
-    border none
-    border-bottom 1px solid #BBB !important
-    cursor text
-
-  input[type="submit"]
-    height 45px
-    width 45px
-    display inline-block
-    colorred
-    float right
-    background transparent
-    text-indent -10000px
-    border none
-    position absolute
-    top 0
-    right 0
-    z-index 2
-    cursor pointer
-    opacity 0.4
-    cursor pointer
-    transition opacity .4s ease
-
-  input[type="submit"]:hover
-    opacity 0.8
+/* home */
+#our-services
+  background-color #c00
+  background-image url('../img/bg-space.jpg')
+  background-position center center
+  background-size cover
+  background-repeat no-repeat
 
 .btn-white
   background white
@@ -252,38 +209,6 @@ header
 #search_submit
   margin-top 20px
   color #555
-
-/********************************/
-.more-info
-  text-align center
-  font-size 16px
-  padding 30px 0
-  border-bottom 1px solid #eee
-  .info-links
-    color #555
-    a
-      color #555555
-      &:hover
-        color #cb6c18
-#why-us
-  padding 100px 0
-  text-align center
-  .title
-    color #555555
-  p
-    color #555555
-    font-size 18px
-#for-what
-  background #18559d
-  padding 100px 0
-  color #f5f5f5
-  h3
-    color white
-#use
-  padding 100px 0
-  h2
-    color #555555
-    text-align center
 
 .main-bg-pages
   background-color #cb6c18
@@ -414,30 +339,7 @@ header
       color #f2dec7
       line-height 35px
       font-weight 300
-#presence
-  padding 130px 0
-  .description
-    h2
-      color #584e48
-    p
-      color #584e48
-      font-size 20px
-      text-align justify
-    .process
-      h2
-        color #584e48
-      p
-        color #584e48
-        font-size 20px
-        text-align justify 
-#politics
-  .description
-    h2
-      color #584e48
-    p
-      color #584e48
-      font-size 20px
-      text-align justify
+
 #contract
   background-image url('../img/parallax.jpg')
   background-position center center
@@ -454,16 +356,7 @@ header
       text-align center
       text-shadow 0 0 10px rgba(0,0,0,0.5)
 
-#who-are
-  padding 130px 0
-  .description
-    margin-top 30px
-    padding-left 20px
-    h2
-      color #584e48
-    p
-      color #584e48
-      font-size 20px
+
 #product-detail
   margin 100px 0
   .title-detail
@@ -661,6 +554,32 @@ header
     box-shadow 0 0 0 transparent !important
     h3
       color #cb6c18
+.box-white
+  background-color white
+  margin 20px
+  padding 0
+  transition all 0.5s ease
+  position relative
+  color #555
+  .title-box
+    height 50px
+    padding 15px
+  .box-footer
+    position absolute
+    bottom 10px
+    padding 0 15px
+    font-size 18px
+    a
+      color #555
+      font-weight bold
+      &:hover
+        color #7e0000
+  .icon-box-bg
+    height 150px
+    background-size 180px
+    background-repeat no-repeat
+    background-position right
+
 .box-default
   margin 10px
   padding 10px
@@ -730,17 +649,26 @@ header
         border-top-left-radius 0px
         border-top-right-radius 0px
 
-.parallax
+#parallax
   background-image url('../img/parallax.jpg')
   background-repeat no-repeat
   background-position center center
   background-size cover
   .content-contact
     line-height 50px
-  .title
-    h2,h4
+  .description
+    margin-top 30px
+    h2,h3 > a
       color white
-      text-shadow 0 4px 3px rgba(0,0,0, 0.5)
+      font-weight 300
+      line-height 30px
+      -webkit-transition all ease 0.1s
+      -moz-transition all ease 0.1s
+      -ms-transition all ease 0.1s
+      -o-transition all ease 0.1s
+      transition all ease 0.1s
+      &:hover
+        color red
   .contact
     margin-top 30px
     a,p
@@ -804,11 +732,15 @@ header
     width 100%
 
 /************** footer area css ******************/
-
+#info
+  background-color #5d5d5d
+  padding 20px 0
+  p, h3
+    color white
 #footer_area
-  background #051e2d
+  background #fff
   padding 30px 0
-  color white
+  color #555
   line-height 30px
   border-top 1px solid #ccc
   .first-foo
@@ -1060,6 +992,7 @@ header
 .form-item
   padding-top 20px
 .form-control
+  margin-bottom 15px
   display block
   width 100%
   height 44px
@@ -1069,8 +1002,7 @@ header
   color #555
   background-color #fff
   background-image none
-  border none
-  padding 0
+  border 1px solid #fff
   border-bottom 1px solid #eaeaea !important
   border-radius 0px
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
@@ -1084,9 +1016,8 @@ header
   transition all ease .1s
 
   &:focus
-    padding 8px 5px
-    border none
-    border-bottom 1px solid #888 !important
+    padding 6px 12px
+    border 1px solid red !important
     outline 0
     -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
     box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
@@ -1178,35 +1109,119 @@ header
   width 100%
   height 100%
   opacity 1
-  background-color #cb6c18
+  background #bdc3c7 /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #bdc3c7 , #2c3e50); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #bdc3c7 , #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 .block-ui-message
   background-color transparent
-.spinner
-  margin 15px auto 0
-  width 70px
-  text-align center
-  & > div
-    width 18px
-    height 18px
-    background-color #fff
-    border-radius 100%
-    display inline-block
-    -webkit-animation sk-bouncedelay 1.4s infinite ease-in-out both
-    animation sk-bouncedelay 1.4s infinite ease-in-out both
-  .bounce1
-    -webkit-animation-delay -0.32s
-    animation-delay -0.32s
-  .bounce2
-    -webkit-animation-delay -0.16s
-    animation-delay -0.16s
+.sk-circle
+  margin 20px auto
+  width 60px
+  height 60px
+  position relative
+  .sk-child
+    width 100%
+    height 100%
+    position absolute
+    left 0
+    top 0
+    &:before
+      content ''
+      display block
+      margin 0 auto
+      width 20%
+      height 20%
+      background-color #fff
+      border-radius 100%
+      -webkit-animation sk-circleBounceDelay 1.2s infinite ease-in-out both
+      animation sk-circleBounceDelay 1.2s infinite ease-in-out both
+  .sk-circle2
+    -webkit-transform rotate(30deg)
+    -ms-transform rotate(30deg)
+    transform rotate(30deg)
+    &:before
+        -webkit-animation-delay -1.1s
+        animation-delay -1.1s
+  .sk-circle3
+    -webkit-transform rotate(60deg)
+    -ms-transform rotate(60deg)
+    transform rotate(60deg)
+    &:before
+        -webkit-animation-delay -1s
+        animation-delay -1s
+  .sk-circle4
+    -webkit-transform rotate(90deg)
+    -ms-transform rotate(90deg)
+    transform rotate(90deg)
+    &:before
+        -webkit-animation-delay -0.9s
+        animation-delay -0.9s
+  .sk-circle5
+    -webkit-transform rotate(120deg)
+    -ms-transform rotate(120deg)
+    transform rotate(120deg)
+    &:before
+        -webkit-animation-delay -0.8s
+        animation-delay -0.8s
+  .sk-circle6
+    -webkit-transform rotate(150deg)
+    -ms-transform rotate(150deg)
+    transform rotate(150deg)
+    &:before
+        -webkit-animation-delay -0.7s
+        animation-delay -0.7s
+  .sk-circle7
+    -webkit-transform rotate(180deg)
+    -ms-transform rotate(180deg)
+    transform rotate(180deg)
+    &:before
+        -webkit-animation-delay -0.6s
+        animation-delay -0.6s
+  .sk-circle8
+    -webkit-transform rotate(210deg)
+    -ms-transform rotate(210deg)
+    transform rotate(210deg)
+    &:before
+        -webkit-animation-delay -0.5s
+        animation-delay -0.5s
+  .sk-circle9
+    -webkit-transform rotate(240deg)
+    -ms-transform rotate(240deg)
+    transform rotate(240deg)
+    &:before
+        -webkit-animation-delay -0.4s
+        animation-delay -0.4s
+  .sk-circle10
+    -webkit-transform rotate(270deg)
+    -ms-transform rotate(270deg)
+    transform rotate(270deg)
+    &:before
+        -webkit-animation-delay -0.3s
+        animation-delay -0.3s
+  .sk-circle11
+    -webkit-transform rotate(300deg)
+    -ms-transform rotate(300deg)
+    transform rotate(300deg)
+    &:before
+        -webkit-animation-delay -0.2s
+        animation-delay -0.2s
+  .sk-circle12
+    -webkit-transform rotate(330deg)
+    -ms-transform rotate(330deg)
+    transform rotate(330deg)
+    &:before
+        -webkit-animation-delay -0.1s
+        animation-delay -0.1s
 
-@-webkit-keyframes sk-bouncedelay {
+
+@-webkit-keyframes sk-circleBounceDelay {
   0%, 80%, 100% { -webkit-transform: scale(0) }
   40% { -webkit-transform: scale(1.0) }
 }
 
-@keyframes sk-bouncedelay
+@keyframes sk-circleBounceDelay
   0%, 80%, 100%
     -webkit-transform: scale(0);
     transform: scale(0);
