--- a/app/css/main.css
+++ b/app/css/main.css
@@ -46,18 +46,26 @@ h5,
 h6 {
   margin: 0 0 15px;
   font-weight: 500;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .section_padding {
   padding: 80px 0;
 }
+.section_padding .title-section {
+  color: #fff;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  text-align: center;
+}
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 16px;
 }
 body {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Roboto', sans-serif;
 }
 .white {
   color: #fff !important;
@@ -124,11 +132,23 @@ body {
 header {
   margin-top: 0px;
 }
+header .nav-top {
+  padding-top: 10px;
+  background-color: #fff;
+}
+header .nav-top p,
+header .nav-top p > a {
+  color: #555;
+}
+header .nav-top i {
+  font-size: 22px;
+  padding-left: 10px;
+}
 header .navbar-default {
   position: absolute;
   left: 0;
   right: 0;
-  top: 0px;
+  top: 35px;
   background: transparent;
   height: 110px;
   border: none;
@@ -141,10 +161,11 @@ header .navbar-default .navbar-brand {
 }
 header .navbar-default .navbar-nav > li > a {
   color: #f5f5f5;
-  padding: 45px 10px 15px;
-  font-size: 18px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 300;
+  padding: 50px 10px 15px;
+  font-size: 22px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  text-shadow: 0 2px 5px #000;
   -webkit-transition: all ease-in-out 0.35s;
   -o-transition: all ease-in-out 0.35s;
   transition: all ease-in-out 0.35s;
@@ -194,74 +215,19 @@ header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
   color: #fff;
 }
 header .logo {
-  width: 300px;
-  margin-top: 32px;
+  width: auto;
+  margin-top: 30px;
 }
 .navbar-header {
   color: #d2b770 !important;
   text-align: left;
 }
-#wrap {
-  margin: 20px 0px 15px 120px;
-  display: inline-block;
-  position: relative;
-  height: 60px;
-  float: right;
-  padding: 0;
-  position: relative;
-}
-#wrap .input-search {
-  height: 55px;
-  border: 1px solid #eee;
-  font-size: 18px;
-  display: inline-block;
-  font-weight: 300;
-  outline: none;
-  color: #555;
-  padding: 3px;
-  padding-right: 40px;
-  width: 120px;
-  position: absolute;
-  top: 10px;
-  right: 0;
-  background: none;
-  z-index: 3;
-  transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
-  cursor: pointer;
-  padding-left: 15px;
-}
-#wrap input[type="text"]:focus:hover {
-  border: none;
-  border-bottom: 1px solid #bbb !important;
-}
-#wrap input[type="text"]:focus {
-  width: 750px;
-  background: #fff;
-  z-index: 1;
-  border: none;
-  border-bottom: 1px solid #bbb !important;
-  cursor: text;
-}
-#wrap input[type="submit"] {
-  height: 45px;
-  width: 45px;
-  display: inline-block;
-colorred
-  float: right;
-  background: transparent;
-  text-indent: -10000px;
-  border: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  cursor: pointer;
-  opacity: 0.4;
-  cursor: pointer;
-  transition: opacity 0.4s ease;
-}
-#wrap input[type="submit"]:hover {
-  opacity: 0.8;
+#our-services {
+  background-color: #c00;
+  background-image: url("../img/bg-space.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .btn-white {
   background: #fff;
@@ -269,47 +235,6 @@ colorred
 #search_submit {
   margin-top: 20px;
   color: #555;
-}
-.more-info {
-  text-align: center;
-  font-size: 16px;
-  padding: 30px 0;
-  border-bottom: 1px solid #eee;
-}
-.more-info .info-links {
-  color: #555;
-}
-.more-info .info-links a {
-  color: #555;
-}
-.more-info .info-links a:hover {
-  color: #cb6c18;
-}
-#why-us {
-  padding: 100px 0;
-  text-align: center;
-}
-#why-us .title {
-  color: #555;
-}
-#why-us p {
-  color: #555;
-  font-size: 18px;
-}
-#for-what {
-  background: #18559d;
-  padding: 100px 0;
-  color: #f5f5f5;
-}
-#for-what h3 {
-  color: #fff;
-}
-#use {
-  padding: 100px 0;
-}
-#use h2 {
-  color: #555;
-  text-align: center;
 }
 .main-bg-pages {
   background-color: #cb6c18;
@@ -470,33 +395,6 @@ colorred
   line-height: 35px;
   font-weight: 300;
 }
-#presence {
-  padding: 130px 0;
-}
-#presence .description h2 {
-  color: #584e48;
-}
-#presence .description p {
-  color: #584e48;
-  font-size: 20px;
-  text-align: justify;
-}
-#presence .description .process h2 {
-  color: #584e48;
-}
-#presence .description .process p {
-  color: #584e48;
-  font-size: 20px;
-  text-align: justify;
-}
-#politics .description h2 {
-  color: #584e48;
-}
-#politics .description p {
-  color: #584e48;
-  font-size: 20px;
-  text-align: justify;
-}
 #contract {
   background-image: url("../img/parallax.jpg");
   background-position: center center;
@@ -516,20 +414,6 @@ colorred
   font-size: 20px;
   text-align: center;
   text-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-#who-are {
-  padding: 130px 0;
-}
-#who-are .description {
-  margin-top: 30px;
-  padding-left: 20px;
-}
-#who-are .description h2 {
-  color: #584e48;
-}
-#who-are .description p {
-  color: #584e48;
-  font-size: 20px;
 }
 #product-detail {
   margin: 100px 0;
@@ -760,6 +644,37 @@ color
 .box-doc:hover h3 {
   color: #cb6c18;
 }
+.box-white {
+  background-color: #fff;
+  margin: 20px;
+  padding: 0;
+  transition: all 0.5s ease;
+  position: relative;
+  color: #555;
+}
+.box-white .title-box {
+  height: 50px;
+  padding: 15px;
+}
+.box-white .box-footer {
+  position: absolute;
+  bottom: 10px;
+  padding: 0 15px;
+  font-size: 18px;
+}
+.box-white .box-footer a {
+  color: #555;
+  font-weight: bold;
+}
+.box-white .box-footer a:hover {
+  color: #7e0000;
+}
+.box-white .icon-box-bg {
+  height: 150px;
+  background-size: 180px;
+  background-repeat: no-repeat;
+  background-position: right;
+}
 .box-default {
   margin: 10px;
   padding: 10px;
@@ -856,36 +771,49 @@ color
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
 }
-.parallax {
+#parallax {
   background-image: url("../img/parallax.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
-.parallax .content-contact {
+#parallax .content-contact {
   line-height: 50px;
 }
-.parallax .title h2,
-.parallax .title h4 {
-  color: #fff;
-  text-shadow: 0 4px 3px rgba(0,0,0,0.5);
-}
-.parallax .contact {
+#parallax .description {
   margin-top: 30px;
 }
-.parallax .contact a,
-.parallax .contact p {
+#parallax .description h2,
+#parallax .description h3 > a {
+  color: #fff;
+  font-weight: 300;
+  line-height: 30px;
+  -webkit-transition: all ease 0.1s;
+  -moz-transition: all ease 0.1s;
+  -ms-transition: all ease 0.1s;
+  -o-transition: all ease 0.1s;
+  transition: all ease 0.1s;
+}
+#parallax .description h2:hover,
+#parallax .description h3 > a:hover {
+  color: #f00;
+}
+#parallax .contact {
+  margin-top: 30px;
+}
+#parallax .contact a,
+#parallax .contact p {
   color: #fff;
   font-size: 20px;
   line-height: 30px;
   font-weight: 300;
   text-shadow: 0 2px 3px rgba(0,0,0,0.2);
 }
-.parallax .social-media {
+#parallax .social-media {
   text-align: center;
   border-top: 1px solid #fff;
 }
-.parallax .social-media a {
+#parallax .social-media a {
   font-size: 20px;
   padding-right: 30px;
 }
@@ -938,10 +866,18 @@ color
 .img-size a>img {
   width: 100%;
 }
-#footer_area {
-  background: #051e2d;
-  padding: 30px 0;
+#info {
+  background-color: #5d5d5d;
+  padding: 20px 0;
+}
+#info p,
+#info h3 {
   color: #fff;
+}
+#footer_area {
+  background: #fff;
+  padding: 30px 0;
+  color: #555;
   line-height: 30px;
   border-top: 1px solid #ccc;
 }
@@ -1232,6 +1168,7 @@ color
   padding-top: 20px;
 }
 .form-control {
+  margin-bottom: 15px;
   display: block;
   width: 100%;
   height: 44px;
@@ -1241,8 +1178,7 @@ color
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: none;
-  padding: 0;
+  border: 1px solid #fff;
   border-bottom: 1px solid #eaeaea !important;
   border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
@@ -1256,9 +1192,8 @@ color
   transition: all ease 0.1s;
 }
 .form-control:focus {
-  padding: 8px 5px;
-  border: none;
-  border-bottom: 1px solid #888 !important;
+  padding: 6px 12px;
+  border: 1px solid #f00 !important;
   outline: 0;
   -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
   box-shadow: 0 0 0 9px rgba(0,0,0,0);
@@ -1353,34 +1288,137 @@ color
   width: 100%;
   height: 100%;
   opacity: 1;
-  background-color: #cb6c18;
+  background: #bdc3c7 /* fallback for old browsers */;
+  background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #bdc3c7, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .block-ui-message {
   background-color: transparent;
 }
-.spinner {
-  margin: 15px auto 0;
-  width: 70px;
-  text-align: center;
+.sk-circle {
+  margin: 20px auto;
+  width: 60px;
+  height: 60px;
+  position: relative;
 }
-.spinner > div {
-  width: 18px;
-  height: 18px;
+.sk-circle .sk-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.sk-circle .sk-child:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 20%;
+  height: 20%;
   background-color: #fff;
   border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
+  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
 }
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.sk-circle .sk-circle2 {
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
 }
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
+.sk-circle .sk-circle2:before {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
-@-webkit-keyframes sk-bouncedelay {
+.sk-circle .sk-circle3 {
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
+}
+.sk-circle .sk-circle3:before {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+.sk-circle .sk-circle4 {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.sk-circle .sk-circle4:before {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+.sk-circle .sk-circle5 {
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
+}
+.sk-circle .sk-circle5:before {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+.sk-circle .sk-circle6 {
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
+}
+.sk-circle .sk-circle6:before {
+  -webkit-animation-delay: -0.7s;
+  animation-delay: -0.7s;
+}
+.sk-circle .sk-circle7 {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.sk-circle .sk-circle7:before {
+  -webkit-animation-delay: -0.6s;
+  animation-delay: -0.6s;
+}
+.sk-circle .sk-circle8 {
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
+}
+.sk-circle .sk-circle8:before {
+  -webkit-animation-delay: -0.5s;
+  animation-delay: -0.5s;
+}
+.sk-circle .sk-circle9 {
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
+}
+.sk-circle .sk-circle9:before {
+  -webkit-animation-delay: -0.4s;
+  animation-delay: -0.4s;
+}
+.sk-circle .sk-circle10 {
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
+.sk-circle .sk-circle10:before {
+  -webkit-animation-delay: -0.3s;
+  animation-delay: -0.3s;
+}
+.sk-circle .sk-circle11 {
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
+}
+.sk-circle .sk-circle11:before {
+  -webkit-animation-delay: -0.2s;
+  animation-delay: -0.2s;
+}
+.sk-circle .sk-circle12 {
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
+}
+.sk-circle .sk-circle12:before {
+  -webkit-animation-delay: -0.1s;
+  animation-delay: -0.1s;
+}
+@-webkit-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
   }
@@ -1388,7 +1426,7 @@ color
     -webkit-transform: scale(1);
   }
 }
-@-moz-keyframes sk-bouncedelay {
+@-moz-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -1398,7 +1436,7 @@ color
     transform: scale(1);
   }
 }
-@-webkit-keyframes sk-bouncedelay {
+@-webkit-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -1408,7 +1446,7 @@ color
     transform: scale(1);
   }
 }
-@-o-keyframes sk-bouncedelay {
+@-o-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -1418,7 +1456,7 @@ color
     transform: scale(1);
   }
 }
-@keyframes sk-bouncedelay {
+@keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
     transform: scale(0);
