--- a/app/css/main.css
+++ b/app/css/main.css
@@ -177,7 +177,7 @@ header .navbar-default .navbar-nav > li > a:focus {
   border-bottom: 1px solid #f5f5f5;
 }
 header .navbar-default .nav-main {
-  margin-right: 25px;
+  margin-top: 5px;
 }
 header .navbar-default .nav-log {
   margin-top: 30px;
@@ -237,9 +237,10 @@ header .logo {
   color: #555;
 }
 .main-bg-pages {
-  background-color: #cb6c18;
+  background: #bdc3c7 /* fallback for old browsers */;
+  background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50) /* Chrome 10-25, Safari 5.1-6 */;
+  background: linear-gradient(to left, #bdc3c7, #2c3e50);
   height: 110px;
-  background-repeat: no-repeat;
 }
 .slider-img {
   background-position: center center;
@@ -1530,6 +1531,10 @@ color
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  header .navbar-default .navbar-nav > li > a {
+    color: #f5f5f5;
+    padding: 65px 5px 15px;
+  }
   .breadcrumb > li {
     font-size: 12px;
   }
@@ -1608,20 +1613,15 @@ color
   padding: 30px 0;
 }
 @media only screen and (max-width: 767px) {
+  header .navbar-default .navbar-nav > li > a {
+    font-size: 18px;
+    font-weight: 300;
+  }
   .more-info .info-links a {
     line-height: 35px;
   }
   .carousel {
     margin-top: 50px;
-  }
-  .log-section-mobile {
-    display: inline;
-  }
-  .log-section-mobile .loging-mob {
-    background-color: #cb6c18;
-    padding: 20px 0;
-    border-top: 1px solid #db8a12;
-    text-align: center;
   }
   #footer_area .info {
     text-align: center;
@@ -1638,15 +1638,17 @@ color
   .slider-img {
     height: 760px;
   }
-  .navbar-header {
-    background: #cb6c18;
-    padding-bottom: 15px;
+  header {
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
   }
-  header .navbar-default .nav-log {
-    margin-top: 30px;
-    border-left: 1px solid transparent;
-    text-indent: 5px;
-    display: none;
+  header .navbar-default {
+    top: 40px;
+    height: 80px;
+    background: #bdc3c7 /* fallback for old browsers */;
+    background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50) /* Chrome 10-25, Safari 5.1-6 */;
+    background: linear-gradient(to left, #bdc3c7, #2c3e50);
   }
   .nav-main {
     border: none !important;
@@ -1665,9 +1667,6 @@ color
     border-left: 0 solid transparent;
     border-top: 1px solid #ccc;
     padding: 0;
-  }
-  header .navbar-default {
-    top: 0;
   }
   .carousel-caption h3 {
     font-size: 36px;
@@ -1784,8 +1783,8 @@ color
     display: none;
   }
   header .logo {
-    margin-top: 25px;
-    width: 230px;
+    margin-top: 10px;
+    width: auto;
   }
   h2.title-outstanding {
     font-size: 16px !important;
