--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -62,7 +62,7 @@
         <div class="col-sm-4">
             <div class="box-white">
                 <div class="title-box">
-                    <p>Asesoría, capacitación, mantenimiento de los diversos equipos.</p>
+                    <p>Asesoría, capacitación, reparación y mantenimiento de los diversos equipos.</p>
                 </div>
                 <div class="icon-box-bg" style="background-image: url('../img/icons/keys.png')"></div>
                 <div class="box-footer">
