--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -65,6 +65,9 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  header .navbar-default .navbar-nav > li > a
+    color #f5f5f5
+    padding 65px 5px 15px
   .breadcrumb > li
     font-size 12px
   #footer_area .first-foo
@@ -192,17 +195,13 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  header .navbar-default .navbar-nav > li > a
+    font-size 18px
+    font-weight 300
   .more-info .info-links a
     line-height 35px
   .carousel
     margin-top 50px
-  .log-section-mobile
-    display inline
-    .loging-mob
-      background-color #cb6c18
-      padding 20px 0
-      border-top 1px solid #db8a12
-      text-align center
   #footer_area .info
     text-align center
   #footer_area .info a
@@ -213,14 +212,17 @@
     width 40%
   .slider-img
     height 760px
-  .navbar-header
-    background #cb6c18
-    padding-bottom 15px
-  header .navbar-default .nav-log
-    margin-top 30px
-    border-left 1px solid transparent;
-    text-indent 5px
-    display none
+  header
+    position fixed
+    width 100%
+    z-index 9999
+  header .navbar-default
+    top 40px
+    height 80px
+    background #bdc3c7 /* fallback for old browsers */
+    background -webkit-linear-gradient(to left, #bdc3c7 , #2c3e50) /* Chrome 10-25, Safari 5.1-6 */
+    background linear-gradient(to left, #bdc3c7 , #2c3e50)
+
   .nav-main
     border none !important
   .nav-log
@@ -234,8 +236,6 @@
     border-left 0 solid transparent
     border-top 1px solid #ccc
     padding 0
-  header .navbar-default
-    top 0
   .carousel-caption h3
     font-size 36px
   .carousel-caption p
@@ -316,8 +316,8 @@
   #wrap
     display none
   header .logo
-    margin-top 25px
-    width 230px
+    margin-top 10px
+    width auto
   h2.title-outstanding
     font-size 16px !important
     padding 20px 10px !important
