--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -66,7 +66,7 @@
                                           ng-model="Contact.notification.message"></textarea>
 
                                 <div style="text-align: right;padding-top:15px;">
-                                    <button type="submit" class="btn-orange" ng-disabled="Contact.busy">
+                                    <button type="submit" class="btn-red" ng-disabled="Contact.busy">
                                         Enviar <span ng-if="Contact.busy"><i class="fa fa-spinner fa-spin"></i></span>
                                     </button>
 
