--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -94,7 +94,7 @@
             <div class="col-sm-6 description">
                 <h3><a href="tel:3531238860"><i class="fa fa-phone"></i> 353 123 8860</a></h3>
 
-                <h3><a href="tel:3535334925"><i class="fa fa-phone"></i> 01(353) 533 49 25</a></h3>
+                <h3><a href="tel:3535363150"><i class="fa fa-phone"></i> 353 536 3150</a></h3>
 
                 <h3><a href="mailto:ainoxher@gmail.com"><i class="fa fa-envelope"></i> ainoxher@gmail.com</a></h3>
 
