--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -5,20 +5,23 @@
     <div class="box-widget-container">
         <h2>Soporte telefónico</h2>
 
-        <h3><a href="tel:3318959338"><i class="fa fa-mobile"></i>(33) 18 95 93 38 </a></h3>
+        <h3><a href="tel:3318959338"><i class="fa fa-phone"></i> 353 123 8860 </a></h3>
 
-        <h3><a href="tel:013535334925"><i class="fa fa-phone"></i> 01(353) 533 49 25</a></h3>
-
-        <h3><a href="mailto:info@mercadomovil.com.mx"><i class="fa fa-envelope"></i>
-            info@mercadomovil.com.mx</a>
+        <h3><a href="tel:3535363150"><i class="fa fa-phone"></i> 353 536 3150</a></h3>
+        <h2>Correo</h2>
+        <h3><a href="mailto:ainoxher@gmail.com"><i class="fa fa-envelope"></i>
+            ainoxher@gmail.com</a>
+        </h3>
+        <h3><a href="mailto:contacto@ainoxher.com"><i class="fa fa-envelope"></i>
+            contacto@ainoxher.com</a>
         </h3>
 
         <h2>Síguenos en</h2>
 
         <h3>
-            <a target="_blank" href="https://www.facebook.com/MercadoMovilMX?fref=ts"><i class="fa fa-facebook-square fa-2x"></i></a>
-            <a target="_blank" href="https://twitter.com/mercadomovil_mx?lang=es"><i class="fa fa-twitter-square fa-2x"></i></a>
-            <a target="_blank" href="https://plus.google.com/u/0/108180722784779473100/posts"><i class="fa fa-google-plus-square fa-2x"></i></a>
+            <a target="_blank" href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+            <a target="_blank" href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
+            <a target="_blank" href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
         </h3>
     </div>
 </div>
