--- a/app/css/main.css
+++ b/app/css/main.css
@@ -447,7 +447,10 @@ header .logo {
   text-shadow: 0 0 10px #000;
 }
 #content-contact {
-  background-color: #f5f5f5;
+  background: #bdc3c7 /* fallback for old browsers */;
+  background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50) /* Chrome 10-25, Safari 5.1-6 */;
+  background: linear-gradient(to left, #bdc3c7, #2c3e50);
+  border-top: 1px solid rgba(255,255,255,0.2);
 }
 #news .title {
   color: #555;
@@ -604,10 +607,11 @@ color
   border: 1px solid #f5f5f5;
 }
 .box-widget .box-widget-header {
-  padding: 20px;
+  padding: 10px;
   border-bottom: 1px solid #ccc;
   font-size: 20px;
-  color: #777;
+  background-color: #999;
+  color: #fff;
 }
 .box-widget .box-widget-container {
   padding: 20px;
@@ -1179,8 +1183,7 @@ color
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #fff;
-  border-bottom: 1px solid #eaeaea !important;
+  border: 1px solid #eaeaea !important;
   border-radius: 0px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0);
