ajuste de iconos y de imagenes en gral, ajuste de boxes categories

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -587,8 +587,8 @@ header
 
 .box-default
   margin 10px
-  padding 10px
   transition all 0.5s ease
+  border-bottom 3px solid #5d5d5d
   .description
     h4
       color #767676
@@ -601,8 +601,9 @@ header
     color #c7c7c7
     padding 5px 0
   h3
-    color #5d5d5d
-    padding 10px 0 0
+    background-color #5d5d5d
+    padding 10px
+    color white
     font-size 22px
   .comment-area
     padding-bottom 10px
@@ -624,6 +625,8 @@ header
     p
       color #5d5d5d
       text-align justify
+    .height-summary
+      padding 0 10px
   &:hover, &:focus
     background transparent
     box-shadow 0 0 3px rgba(0,0,0,0.4)
