--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,4 +1,4 @@
-<section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
+<section class="main-bg-pages"></section>
 <section id="content-area">
     <div class="container">
         <div class="row">
