--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -17,13 +17,12 @@
 
                                 <h3><a href="tel:013535334925"><i class="fa fa-phone"></i> 01(353) 533 49 25</a></h3>
 
-                                <h3><a href="mailto:nfo@mercadomovil.com.mx"><i class="fa fa-envelope"></i>
-                                    nfo@mercadomovil.com.mx</a></h3>
+                                <h3><a href="mailto:info@ainoxher.com.mx"><i class="fa fa-envelope"></i>info@ainoxher.com.mx</a></h3>
 
                                 <h3>
-                                    <a target="_blank" href="https://www.facebook.com/MercadoMovilMX?fref=ts"><i
+                                    <a target="_blank" href="https://www.facebook.com/#"><i
                                             class="fa fa-facebook-square fa-2x"></i></a>
-                                    <a target="_blank" href="https://twitter.com/mercadomovil_mx?lang=es"><i
+                                    <a target="_blank" href="https://twitter.com/#"><i
                                             class="fa fa-twitter-square fa-2x"></i></a>
                                     <a target="_blank" href="https://plus.google.com/u/0/108180722784779473100/posts"><i
                                             class="fa fa-google-plus-square fa-2x"></i></a>
