--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,8 @@
 <div class="carousel slide" id="carousel-home">
     <uib-carousel interval="6000" template-url="/templates/partials/carousel.html">
         <uib-slide ng-repeat="slide in Home.mainSlider">
-        <!--<div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>-->
-        <img class="img-responsive" src={{ slide.urlImages.original }} alt=""/>
+        <div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>
+        <!--<img class="img-responsive" ng-src="{{ slide.urlImages.original  }}" alt=""/>-->
         </uib-slide>
     </uib-carousel>
 </div>
@@ -11,77 +11,18 @@
         <div class="text-center">
             <h1 class="title-section">Nuestros servicios</h1>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" ng-repeat="service in Home.services">
             <div class="box-white">
                 <div class="title-box">
-                    <p>Instalaciones sanitarias para la producción de alimentos de alta calidad.</p>
+                    <p>{{ service.excerpt }}</p>
                 </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/watter.png')"></div>
+                <div class="icon-box-bg" style="background-image: url('{{ service.urlImages.original }}')"></div>
                 <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
+                    <a ui-sref="post_detail({slug: service.slug})">Más información <i class="fa fa-angle-right"></i></a>
                 </div>
             </div>
         </div>
 
-        <div class="col-sm-4">
-            <div class="box-white">
-                <div class="title-box">
-                    <p>Fabricación de equipo a la medida en acero inoxidable.</p>
-                </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/engrane.png')"></div>
-                <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="box-white">
-                <div class="title-box">
-                    <p>Ingeniería capacitada en automatización.</p>
-                </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/engennier.png')"></div>
-                <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="box-white">
-                <div class="title-box">
-                    <p>Maquinaria para proceso de lacteos (queso oaxaca, cuajado y modelado de queso).</p>
-                </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/factory.png')"></div>
-                <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="box-white">
-                <div class="title-box">
-                    <p>Asesoría, capacitación, reparación y mantenimiento de los diversos equipos.</p>
-                </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/keys.png')"></div>
-                <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-4">
-            <div class="box-white">
-                <div class="title-box">
-                    <p>Distribución de diferentes productos.</p>
-                </div>
-                <div class="icon-box-bg" style="background-image: url('../img/icons/boxes.png')"></div>
-                <div class="box-footer">
-                    <a href="#">Más información <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
-        </div>
 
     </div>
 </section>
