--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -73,7 +73,7 @@ body
 
 /************** Grid css******************/
 .content
-  margin-top 0px
+  margin-top 0
 .content-post
   margin 80px 0
   article
@@ -593,7 +593,7 @@ header
     h4
       color #767676
   a
-    color #5d5d5d
+    color #fff
   .box-footer
     text-align center
     border-top 1px solid #f4f4f4
