--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -22,7 +22,7 @@
 
                                     <div class="box-container">
                                         <div class="height-title"><h3>{{ entry.title }}</h3></div>
-                                        <div class="height-summary"><p></p></div>
+                                        <div class="height-summary"><p>{{ entry.excerpt }}</p></div>
                                     </div>
                                     <div class="box-footer">
                                         <p><span><i class="fa fa-calendar-"></i></span>
