ajuste de estilo a slider y detalles responsivos en tablet

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -226,11 +226,12 @@ header
   background rgba(0, 0, 0, 0.5)
   height 100%
 .carousel-caption
-  top 35%
-  text-align center
-  opacity 1
+  top 42%
+  opacity 0.8
   width 100%
   left 0
+  padding 5px 70px 0
+  text-align left
   h2
     border-bottom 1px solid rgba(255, 255, 255, 0.4)
     padding-bottom 20px
@@ -250,13 +251,15 @@ header
     text-shadow 0 0 0px #000
   a
     color white
-  h3
+  h1
     text-shadow 0 0 10px #000
+    font-size 46px
   .text
     margin-top 40px
   p
-    font-size 42px
+    font-size 34px
     text-shadow 0 0 10px #000
+    width 60%
 
 #slider-area
   background url(../img/bg.jpg)
