--- a/app/css/main.css
+++ b/app/css/main.css
@@ -255,11 +255,12 @@ header .logo {
   height: 100%;
 }
 .carousel-caption {
-  top: 35%;
-  text-align: center;
-  opacity: 1;
+  top: 42%;
+  opacity: 0.8;
   width: 100%;
   left: 0;
+  padding: 5px 70px 0;
+  text-align: left;
 }
 .carousel-caption h2 {
   border-bottom: 1px solid rgba(255,255,255,0.4);
@@ -287,15 +288,17 @@ header .logo {
 .carousel-caption a {
   color: #fff;
 }
-.carousel-caption h3 {
+.carousel-caption h1 {
   text-shadow: 0 0 10px #000;
+  font-size: 46px;
 }
 .carousel-caption .text {
   margin-top: 40px;
 }
 .carousel-caption p {
-  font-size: 42px;
+  font-size: 34px;
   text-shadow: 0 0 10px #000;
+  width: 60%;
 }
 #slider-area {
   background: url("../img/bg.jpg");
@@ -1538,9 +1541,24 @@ color
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .container-tab {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .navbar-header {
+    margin-top: -30px;
+  }
+  header .navbar-default {
+    top: 40px;
+    height: 80px;
+    background: #bdc3c7 /* fallback for old browsers */;
+    background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50) /* Chrome 10-25, Safari 5.1-6 */;
+    background: linear-gradient(to left, #bdc3c7, #2c3e50);
+  }
   header .navbar-default .navbar-nav > li > a {
     color: #f5f5f5;
-    padding: 65px 5px 15px;
+    padding: 25px 15px;
   }
   .breadcrumb > li {
     font-size: 12px;
@@ -1574,6 +1592,7 @@ color
   header .logo {
     width: 180px;
     margin-top: 40px;
+    padding-left: 25px;
   }
   .box-widget {
     border-left: 0 solid transparent;
@@ -1592,32 +1611,89 @@ color
   .work-description {
     margin-top: 50px;
   }
-}
-.carousel-inner > .item > img {
-  height: 620px;
-}
-.recent-work-wrap {
-  margin: 5px;
-}
-.carousel-caption {
-  top: 25%;
-}
-.recent-work-wrap > .titles {
-  padding: 35px 20px 10px;
-}
-#product-detail .title-detail .content-title .title {
-  text-align: center;
-}
-.recent-work-wrap .titles h3 {
-  font-size: 18px;
-}
-.box-sidebar .box-body .list-group a {
-  color: #777;
-  word-break: break-all;
-}
-#contact-section {
-  background-size: cover;
-  padding: 30px 0;
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
+    color: #fff;
+  }
+  .navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+    width: 40px;
+    height: 5px;
+  }
+  .navbar-logo {
+    display: none;
+  }
+  .navbar-logo .logo-img {
+    display: none;
+  }
+  .navbar-header {
+    float: none;
+  }
+  .navbar-toggle {
+    display: block;
+    margin-top: 7%;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+  }
+  .navbar-collapse.collapse.in {
+    display: block !important;
+    border-top: 0px solid #fff;
+    border-color: transparent;
+  }
+  .navbar-default .navbar-toggle:hover,
+  .navbar-default .navbar-toggle:focus {
+    background: transparent;
+  }
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+  }
+  .navbar-nav {
+    float: none !important;
+    margin: 7.5px -15px;
+  }
+  .navbar-nav>li {
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .navbar-toggle .icon-bar {
+    background: #fff;
+  }
+  .navbar-nav {
+    background: rgba(0,0,0,0.8);
+    margin-top: 30px;
+    box-shadow: 0 4px 5px rgba(0,0,0,0.3);
+    border-top: 0px solid #f5f5f5;
+  }
+  .carousel-inner > .item > img {
+    height: 620px;
+  }
+  .recent-work-wrap {
+    margin: 5px;
+  }
+  .recent-work-wrap > .titles {
+    padding: 35px 20px 10px;
+  }
+  #product-detail .title-detail .content-title .title {
+    text-align: center;
+  }
+  .recent-work-wrap .titles h3 {
+    font-size: 18px;
+  }
+  .box-sidebar .box-body .list-group a {
+    color: #777;
+    word-break: break-all;
+  }
+  #contact-section {
+    background-size: cover;
+    padding: 30px 0;
+  }
 }
 @media only screen and (max-width: 767px) {
   header .navbar-default .navbar-nav > li > a {
