--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -65,9 +65,21 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .container-tab
+    width 100%
+    padding-left 0
+    padding-right 0
+  .navbar-header
+    margin-top -30px
+  header .navbar-default
+    top 40px
+    height 80px
+    background #bdc3c7 /* fallback for old browsers */
+    background -webkit-linear-gradient(to left, #bdc3c7 , #2c3e50) /* Chrome 10-25, Safari 5.1-6 */
+    background linear-gradient(to left, #bdc3c7 , #2c3e50)
   header .navbar-default .navbar-nav > li > a
     color #f5f5f5
-    padding 65px 5px 15px
+    padding 25px 15px
   .breadcrumb > li
     font-size 12px
   #footer_area .first-foo
@@ -93,6 +105,7 @@
   header .logo
     width 180px
     margin-top 40px
+    padding-left 25px
 
   .box-widget
     border-left 0 solid transparent
@@ -107,72 +120,68 @@
   .work-description
     margin-top 50px
 
-  /*header .navbar-default .navbar-nav .dropdown .dropdown-menu*/
-    /*background #389c80*/
-    /*box-shadow none*/
-    /*border-radius 0*/
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
+    color white
+  .navbar-default .navbar-toggle .icon-bar
+    background-color white
+    width 40px
+    height 5px
 
-  /*header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a*/
-    /*color white*/
+  .navbar-logo
+    display none
+    .logo-img
+      display none
 
-  /*.navbar-logo*/
-    /*display none*/
-    /*.logo-img*/
-      /*display none*/
+  .navbar-header
+    float none
 
-  /*.navbar-header*/
-    /*float none*/
+  .navbar-toggle
+    display block
+    margin-top 7%
 
-  /*.navbar-toggle*/
-    /*display block*/
-    /*margin-top 3%*/
+  .navbar-collapse
+    border-top 1px solid transparent
+    box-shadow inset 0 1px 0 rgba(255,255,255,0.1)
 
-  /*.navbar-collapse*/
-    /*border-top 1px solid transparent*/
-    /*box-shadow inset 0 1px 0 rgba(255,255,255,0.1)*/
+  .navbar-collapse.collapse
+    display none !important
 
-  /*.navbar-collapse.collapse*/
-    /*display none !important*/
+  .navbar-collapse.collapse.in
+    display block !important
+    border-top 0px solid white
+    border-color transparent
 
-  /*.navbar-collapse.collapse.in*/
-    /*display block !important*/
-    /*border-top 0px solid white*/
-    /*border-color transparent*/
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+    background transparent
 
-  /*.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus*/
-    /*background transparent*/
+  .navbar-default .navbar-toggle
+    border-color transparent
 
-  /*.navbar-default .navbar-toggle*/
-    /*border-color transparent*/
+  .navbar-nav
+    float none!important
+    margin 7.5px -15px
 
-  /*.navbar-nav*/
-    /*float none!important*/
-    /*margin 7.5px -15px*/
+  .navbar-nav>li
+    float none
 
-  /*.navbar-nav>li*/
-    /*float none*/
+  .navbar-nav>li>a
+    padding-top 10px
+    padding-bottom 10px
 
-  /*.navbar-nav>li>a*/
-    /*padding-top 10px*/
-    /*padding-bottom 10px*/
+  .navbar-toggle .icon-bar
+    background white
 
-  /*.navbar-toggle .icon-bar*/
-    /*background white*/
-
-  /*.navbar-nav*/
-    /*background white*/
-    /*margin-top 30px*/
-    /*box-shadow 0 4px 5px rgba(0,0,0,0.3)*/
-    /*border-top 1px solid #f5f5f5*/
+  .navbar-nav
+    background rgba(0,0,0,0.8)
+    margin-top 30px
+    box-shadow 0 4px 5px rgba(0,0,0,0.3)
+    border-top 0px solid #f5f5f5
 
   .carousel-inner > .item > img
     height 620px
 
   .recent-work-wrap
     margin 5px
-
-  .carousel-caption
-    top 25%
 
 
   .recent-work-wrap > .titles
