Change emails and img urls

--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -12,8 +12,8 @@
         <h3><a href="mailto:ainoxher@gmail.com"><i class="fa fa-envelope"></i>
             ainoxher@gmail.com</a>
         </h3>
-        <h3><a href="mailto:contacto@ainoxher.com"><i class="fa fa-envelope"></i>
-            contacto@ainoxher.com</a>
+        <h3><a href="mailto:info@ainoxher.com.mx"><i class="fa fa-envelope"></i>
+            info@ainoxher.com.mx</a>
         </h3>
 
         <h2>Síguenos en</h2>
