add target blank to a elements

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -20,11 +20,11 @@
                                 <h3><a href="mailto:info@ainoxher.com.mx"><i class="fa fa-envelope"></i>info@ainoxher.com.mx</a></h3>
 
                                 <h3>
-                                    <a target="_blank" href="https://www.facebook.com/#"><i
+                                    <a target="_blank" href="https://www.facebook.com/ainoxher.tendenciasysatisfaccion?fref=ts"><i
                                             class="fa fa-facebook-square fa-2x"></i></a>
-                                    <a target="_blank" href="https://twitter.com/#"><i
+                                    <a target="_blank" href="#"><i
                                             class="fa fa-twitter-square fa-2x"></i></a>
-                                    <a target="_blank" href="https://plus.google.com/u/0/108180722784779473100/posts"><i
+                                    <a target="_blank" href="#"><i
                                             class="fa fa-google-plus-square fa-2x"></i></a>
                                 </h3>
                             </div>
