--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -44,7 +44,7 @@
                 <h3><a href="mailto:info@ainoxher.com.mx"><i class="fa fa-envelope"></i> info@ainoxher.com.mx</a></h3>
 
                 <h3>
-                    <a href="https://www.google.com.co/maps/place/Nacional+34,+Centro,+59500+San+Jos%C3%A9+de+Gracia,+Mich.,+M%C3%A9xico/@19.9926981,-103.0255348,17z/data=!3m1!4b1!4m5!3m4!1s0x842f0fa63340d54b:0xdf0ef271432c0d23!8m2!3d19.9926931!4d-103.0233461"><i
+                    <a href="https://www.google.com.co/maps/place/Nacional+34,+Centro,+59500+San+Jos%C3%A9+de+Gracia,+Mich.,+M%C3%A9xico/@19.9926981,-103.0255348,17z/data=!3m1!4b1!4m5!3m4!1s0x842f0fa63340d54b:0xdf0ef271432c0d23!8m2!3d19.9926931!4d-103.0233461" target="_blank"><i
                             class="fa fa-map-marker"></i> Carretera Nacional km 34.5
                         Centro
                         Marcos Castellano, Michoacán, México.</a></h3>
